<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".signup.Step2OtpFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etOtp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/enter_otp"
            android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnVerifyOtp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:text="@string/verify_otp"
        android:textSize="17sp"
        app:shapeAppearanceOverlay="@style/DefaultButton" />

    <Button
        android:id="@+id/btnResendOtp"
        style="?attr/borderlessButtonStyle"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/resend_otp"
        android:textSize="17sp"
        app:shapeAppearanceOverlay="@style/DefaultButton" />

    <TextView
        android:text="We have sent an OTP to your email address which is valid for 5 minutes."
        android:textSize="18sp"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>